[tool.poetry]
name = "python-flask-rest-api"
version = "0.1.0"
description = ""
authors = ["zhaohuiwang <ezhwang@gmail.com>"]
readme = "README.md"
packages = [{include = "python_flask_rest_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.32.3"
flask-restful = "^0.3.10"


[tool.poetry.group.test.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
